pc - add textbook at top level, and add support for staff pages

--- a/_config.yml
+++ b/_config.yml
@@ -26,3 +26,19 @@ gh_edit_link_text: "Edit this page on GitHub."
 gh_edit_repository: "https://github.com/ucsb-cs16/w23" # the github URL for your repo
 gh_edit_branch: "main" # the branch that your docs is served from
 gh_edit_view_mode: "edit" # "tree" or "edit" if you want the user to jump into the editor immediately
+
+
+# Collections for website data
+collections:
+  staffers:
+    permalink: "/:path/"
+    output: true
+# Default layouts for each collection type
+defaults:
+  - scope:
+      path: ''
+      type: staffers
+    values:
+      layout: staffer
+      subpath: '/assets/images/'
+ 
